--- a/css/style.css
+++ b/css/style.css
@@ -7383,7 +7383,7 @@ body-1 {
   font-size: 15px;
   line-height: 1.8;
   font-weight: 500;
-  text-align: center;
+  text-align: right;
   color: #17a2b894; }
   body.offcanvas {
     overflow-x: hidden; }
